--- a/examples/zonekeeper/deployment.yaml
+++ b/examples/zonekeeper/deployment.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zonekeeper
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -15,9 +21,14 @@ spec:
       serviceAccountName: zonekeeper
       containers:
       - name: zonekeeper
-        image: tanmaybhat/zonekeeper:1.0.1
+        image: tanmaybhat/zonekeeper:1.3.0
         ports:
         - containerPort: 8081
+        args:
+        - "--pod-label-selector=app=metrics-exporter"
+        env:
+        - name: WATCH_NAMESPACE
+          value: "default,monitoring"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -26,8 +37,13 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["pods", "nodes"]
-    verbs: ["get", "list", "watch", "update", "patch"]
-
+    verbs: ["get", "list", "watch", "patch"]
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get", "list", "watch", "create", "update", "patch"]
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["create", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
